@@ -1,1 +1,5 @@
 *.swp
+.idea
+*target*
+*.iml
+*.log
