@@ -1,16 +1,17 @@
 ################################################################################
-# mesos-dns:1.3.0
-# Date: 12/18/2015
-# Mesos-DNS Version: 0.5.1
+# mesos-dns:1.3.1
+# Date: 07/20/2016
+# Mesos-DNS Version: 0.5.2
 #
 # Description:
 # Provides DNS for almost all services hosted in Mesos. 
 #################################################################################
 
 FROM mrbobbytables/ubuntu-base:1.1.0
-MAINTAINER Bob Killen / killen.bob@gmail.com / @mrbobbytables
 
-ENV VERSION_MESOSDNS=0.5.1
+MAINTAINER Milan Baran / mbaran@pixelfederation.com / @mbaran
+
+ENV VERSION_MESOSDNS=0.5.2
 
 RUN apt-get update      \
  && apt-get -y install  \
