@@ -1,3 +1,7 @@
+2016-07-20 - 1.3.1:
+ - Maintainer change to Pixel Federation
+ - Mesos DNS version changed to 0.5.2
+
 2016-01-22 - 1.3.0:
  - Use new Ubuntu base image.
  - Consul template and envconsul support added
